--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,5 +8,9 @@ set(CMAKE_CXX_STANDARD 23)
 # Generate files for Intellisense
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+# Set external include directory for project
+set(EXTERNAL_INCLUDE_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/external)
+message("Using external include directory: ${EXTERNAL_INCLUDE_DIRECTORY}")
+
 # Add source folder
 add_subdirectory(src)
