--- a/src/shared/CMakeLists.txt
+++ b/src/shared/CMakeLists.txt
@@ -1,5 +1,7 @@
 get_filename_component(CURRENT_FOLDER_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME) 
 
+message("Processing shared library: ${CURRENT_FOLDER_NAME}")
+
 # Add your executable and attach it to main.c
 add_library(${CURRENT_FOLDER_NAME})
 
@@ -9,3 +11,6 @@ target_sources( ${CURRENT_FOLDER_NAME}
 )
 
 target_include_directories(${CURRENT_FOLDER_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
+
+# add include for argparse dependency
+target_include_directories(${CURRENT_FOLDER_NAME} PRIVATE ${EXTERNAL_INCLUDE_DIRECTORY}/argparse/include)
